--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.6
+  firebase_core: ^4.4.0
+  firebase_database: ^12.1.3
 
 dev_dependencies:
   flutter_test:
